# memo

./: Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bag_report.md  feature_request.md  task.md
resource/: memo.toml
src/: config.rs  list.rs  main.rs  new.rs  utils.rs
