[package]
name = "memo"
version = "0.1.0"
authors = ["marsh31 <marsh22h53@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
chrono = "0.4.19"
regex  = "0.1"
serde = {version = "1.0", features = ["derive"] }
toml = "0.4.2"
